[gd_scene load_steps=15 format=2]

[ext_resource path="res://00016-2594931778.png" type="Texture" id=1]
[ext_resource path="res://ParameciaButton.png" type="Texture" id=2]
[ext_resource path="res://NodeButton.png" type="Texture" id=3]
[ext_resource path="res://CardsButton.png" type="Texture" id=4]
[ext_resource path="res://EmbarkButton.png" type="Texture" id=5]
[ext_resource path="res://OptionsButton.png" type="Texture" id=6]
[ext_resource path="res://MainScreenButtons.gd" type="Script" id=7]
[ext_resource path="res://00012-3874558015.png" type="Texture" id=8]
[ext_resource path="res://MainScreen.gd" type="Script" id=9]
[ext_resource path="res://Precipice.png" type="Texture" id=10]
[ext_resource path="res://Crater.png" type="Texture" id=11]
[ext_resource path="res://Caves.png" type="Texture" id=12]

[sub_resource type="Shader" id=1]
code = "// HSV to RBG from https://www.rapidtables.com/convert/color/hsv-to-rgb.html
// Rotation matrix from https://en.wikipedia.org/wiki/Rotation_matrix

shader_type canvas_item;

const float PI = 3.1415926535;

uniform float strength: hint_range(0., 1.) = 0.5;
uniform float speed: hint_range(0., 10.) = 0.5;
uniform float angle: hint_range(0., 360.) = 120.;

void fragment() {
	float hue = UV.x * cos(radians(angle)) - UV.y * sin(radians(angle));
	hue = fract(hue + fract(TIME  * speed));
	float x = 1. - abs(mod(hue / (1./ 6.), 2.) - 1.);
	vec3 rainbow;
	if(hue < 1./6.){
		rainbow = vec3(1., x, 0.);
	} else if (hue < 1./3.) {
		rainbow = vec3(x, 1., 0);
	} else if (hue < 0.5) {
		rainbow = vec3(0, 1., x);
	} else if (hue < 2./3.) {
		rainbow = vec3(0., x, 1.);
	} else if (hue < 5./6.) {
		rainbow = vec3(x, 0., 1.);
	} else {
		rainbow = vec3(1., 0., x);
	}
	vec4 color = texture(TEXTURE, UV);
	COLOR = mix(color, vec4(rainbow, color.a), strength);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/strength = 0.5
shader_param/speed = 0.5
shader_param/angle = 120.0

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="BackgroundOverlay" type="ColorRect" parent="."]
margin_right = 1453.0
margin_bottom = 1024.0
color = Color( 0, 0, 0, 0.847059 )

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )

[node name="EmbarkButton" type="TextureButton" parent="Buttons"]
margin_left = 315.0
margin_top = 24.0
margin_right = 1610.0
margin_bottom = 698.0
rect_scale = Vector2( 0.3, 0.3 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )

[node name="Overlay" type="ColorRect" parent="Buttons/EmbarkButton"]
margin_right = 1297.0
margin_bottom = 663.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.196078 )

[node name="CardsButton" type="TextureButton" parent="Buttons"]
margin_left = 534.0
margin_top = 253.0
margin_right = 1111.0
margin_bottom = 626.0
rect_scale = Vector2( 0.4, 0.4 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )

[node name="Overlay" type="ColorRect" parent="Buttons/CardsButton"]
margin_left = 2.5
margin_right = 577.5
margin_bottom = 375.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.196078 )

[node name="ParameciaButton" type="TextureButton" parent="Buttons"]
margin_left = 257.0
margin_top = 253.0
margin_right = 835.0
margin_bottom = 626.0
rect_scale = Vector2( 0.4, 0.4 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )

[node name="Overlay" type="ColorRect" parent="Buttons/ParameciaButton"]
margin_right = 580.0
margin_bottom = 375.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.196078 )

[node name="NodeButton" type="TextureButton" parent="Buttons"]
margin_left = 534.0
margin_top = 433.0
margin_right = 1112.0
margin_bottom = 806.0
rect_scale = Vector2( 0.4, 0.4 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )

[node name="Overlay" type="ColorRect" parent="Buttons/NodeButton"]
margin_right = 580.0
margin_bottom = 375.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.196078 )

[node name="OptionsButton" type="TextureButton" parent="Buttons"]
margin_left = 257.0
margin_top = 433.0
margin_right = 835.0
margin_bottom = 806.0
rect_scale = Vector2( 0.4, 0.4 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )

[node name="Overlay" type="ColorRect" parent="Buttons/OptionsButton"]
margin_left = 0.00012207
margin_right = 580.0
margin_bottom = 375.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.196078 )

[node name="EmbarkMenu" type="ColorRect" parent="."]
visible = false
margin_left = 217.0
margin_top = 17.0
margin_right = 809.0
margin_bottom = 590.0
color = Color( 0, 0, 0, 1 )

[node name="Return" type="Button" parent="EmbarkMenu"]
margin_left = 244.0
margin_top = 520.0
margin_right = 335.0
margin_bottom = 540.0
mouse_default_cursor_shape = 2
text = "Return"

[node name="RegionMap" type="TextureRect" parent="EmbarkMenu"]
margin_left = 13.0
margin_top = 28.0
margin_right = 1469.0
margin_bottom = 1052.0
rect_scale = Vector2( 0.37, 0.37 )
texture = ExtResource( 8 )

[node name="PrecipiceName" type="TextureRect" parent="EmbarkMenu"]
visible = false
margin_left = 218.0
margin_top = 431.0
margin_right = 718.0
margin_bottom = 631.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="CavesName" type="TextureRect" parent="EmbarkMenu"]
visible = false
margin_left = 239.0
margin_top = 431.0
margin_right = 739.0
margin_bottom = 631.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 12 )

[node name="CraterName" type="TextureRect" parent="EmbarkMenu"]
visible = false
margin_left = 238.0
margin_top = 432.0
margin_right = 738.0
margin_bottom = 632.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )

[node name="CavesButton" type="TextureButton" parent="EmbarkMenu"]
margin_left = 132.0
margin_top = 234.0
margin_right = 158.0
margin_bottom = 264.0
mouse_default_cursor_shape = 2

[node name="Base" type="ColorRect" parent="EmbarkMenu/CavesButton"]
margin_left = 1.0
margin_top = 3.0
margin_right = 26.0
margin_bottom = 27.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Rainbow" type="ColorRect" parent="EmbarkMenu/CavesButton"]
material = SubResource( 2 )
margin_left = 6.0
margin_top = 7.0
margin_right = 21.0
margin_bottom = 23.0
mouse_filter = 2

[node name="Overlay" type="ColorRect" parent="EmbarkMenu/CavesButton"]
margin_left = 1.0
margin_top = 3.0
margin_right = 26.0
margin_bottom = 27.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.176471 )

[node name="CraterButton" type="TextureButton" parent="EmbarkMenu"]
margin_left = 382.0
margin_top = 260.0
margin_right = 408.0
margin_bottom = 290.0
mouse_default_cursor_shape = 2

[node name="Base" type="ColorRect" parent="EmbarkMenu/CraterButton"]
margin_top = 3.0
margin_right = 25.0
margin_bottom = 27.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Rainbow" type="ColorRect" parent="EmbarkMenu/CraterButton"]
material = SubResource( 2 )
margin_left = 5.0
margin_top = 7.0
margin_right = 20.0
margin_bottom = 23.0
mouse_filter = 2

[node name="Overlay" type="ColorRect" parent="EmbarkMenu/CraterButton"]
margin_top = 3.0
margin_right = 25.0
margin_bottom = 27.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.176471 )

[node name="PrecipiceButton" type="TextureButton" parent="EmbarkMenu"]
margin_left = 501.0
margin_top = 93.0
margin_right = 527.0
margin_bottom = 123.0
mouse_default_cursor_shape = 2

[node name="Base" type="ColorRect" parent="EmbarkMenu/PrecipiceButton"]
margin_top = 3.0
margin_right = 25.0
margin_bottom = 27.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Rainbow" type="ColorRect" parent="EmbarkMenu/PrecipiceButton"]
material = SubResource( 2 )
margin_left = 5.0
margin_top = 7.0
margin_right = 20.0
margin_bottom = 23.0
mouse_filter = 2

[node name="Overlay" type="ColorRect" parent="EmbarkMenu/PrecipiceButton"]
margin_top = 3.0
margin_right = 25.0
margin_bottom = 27.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.176471 )

[node name="RegistrationOverlay" type="ColorRect" parent="EmbarkMenu"]
margin_right = 586.0
margin_bottom = 426.0
color = Color( 0, 0, 0, 0.4 )

[node name="Overlay" type="ColorRect" parent="EmbarkMenu"]
visible = false
margin_right = 592.0
margin_bottom = 573.0
color = Color( 0, 0, 0, 0.4 )

[node name="RegistrationConfirm" type="ColorRect" parent="EmbarkMenu"]
visible = false
margin_left = 140.0
margin_top = 117.0
margin_right = 444.0
margin_bottom = 336.0
color = Color( 0, 0, 0, 1 )

[node name="Prompt" type="Label" parent="EmbarkMenu/RegistrationConfirm"]
margin_left = 57.0
margin_top = 17.0
margin_right = 242.0
margin_bottom = 184.0
text = "Please register your account.

For 2 LINK, you wll receive:

* 1 Time Crystal NFT

* Standard Ability Deck

* 10 matches
"
align = 1

[node name="Register" type="Button" parent="EmbarkMenu/RegistrationConfirm"]
margin_left = 103.0
margin_top = 183.0
margin_right = 200.0
margin_bottom = 203.0
text = "Register"

[node name="Registering" type="Label" parent="EmbarkMenu/RegistrationConfirm"]
visible = false
margin_left = 58.0
margin_top = 77.0
margin_right = 252.0
margin_bottom = 125.0
text = "Registering . . .

This will take a few minutes."
align = 1

[node name="ConfirmEmbark" type="ColorRect" parent="EmbarkMenu"]
visible = false
margin_left = 167.0
margin_top = 170.0
margin_right = 419.0
margin_bottom = 306.0
color = Color( 0, 0, 0, 1 )

[node name="Question" type="Label" parent="EmbarkMenu/ConfirmEmbark"]
margin_left = 23.0
margin_top = 25.0
margin_right = 137.0
margin_bottom = 54.0
text = "Travel to \"Caves\"?"

[node name="Cancel" type="Button" parent="EmbarkMenu/ConfirmEmbark"]
margin_left = 140.0
margin_top = 104.0
margin_right = 231.0
margin_bottom = 124.0
mouse_default_cursor_shape = 2
text = "Cancel"

[node name="Confirm" type="Button" parent="EmbarkMenu/ConfirmEmbark"]
margin_left = 21.0
margin_top = 104.0
margin_right = 112.0
margin_bottom = 124.0
mouse_default_cursor_shape = 2
text = "Confirm"

[connection signal="mouse_entered" from="Buttons/EmbarkButton" to="Buttons" method="_on_EmbarkButton_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/EmbarkButton" to="Buttons" method="_on_EmbarkButton_mouse_exited"]
[connection signal="mouse_entered" from="Buttons/CardsButton" to="Buttons" method="_on_CardsButton_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/CardsButton" to="Buttons" method="_on_CardsButton_mouse_exited"]
[connection signal="mouse_entered" from="Buttons/ParameciaButton" to="Buttons" method="_on_ParameciaButton_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/ParameciaButton" to="Buttons" method="_on_ParameciaButton_mouse_exited"]
[connection signal="mouse_entered" from="Buttons/NodeButton" to="Buttons" method="_on_NodeButton_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/NodeButton" to="Buttons" method="_on_NodeButton_mouse_exited"]
[connection signal="mouse_entered" from="Buttons/OptionsButton" to="Buttons" method="_on_OptionsButton_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/OptionsButton" to="Buttons" method="_on_OptionsButton_mouse_exited"]
[connection signal="mouse_entered" from="EmbarkMenu/CavesButton" to="Buttons" method="_on_CavesButton_mouse_entered"]
[connection signal="mouse_exited" from="EmbarkMenu/CavesButton" to="Buttons" method="_on_CavesButton_mouse_exited"]
[connection signal="mouse_entered" from="EmbarkMenu/CraterButton" to="Buttons" method="_on_CraterButton_mouse_entered"]
[connection signal="mouse_exited" from="EmbarkMenu/CraterButton" to="Buttons" method="_on_CraterButton_mouse_exited"]
[connection signal="mouse_entered" from="EmbarkMenu/PrecipiceButton" to="Buttons" method="_on_PrecipiceButton_mouse_entered"]
[connection signal="mouse_exited" from="EmbarkMenu/PrecipiceButton" to="Buttons" method="_on_PrecipiceButton_mouse_exited"]
